--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <h3>Salmon Cookies</h3>
   <div id= "container"></div>  
 </body>
-<script src="app.js"></script>
+<script src="script.js"></script>
 </html>
