this is so broken dude

--- a/sales.html
+++ b/sales.html
@@ -7,18 +7,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <form id="addLocationForm">
-
-    </form>
-    <table>
-        <thead>
-        
-        </thead>
-        <tbody>
-
-    
-</tbody>
-</table>
+    <h2>Salmon Cookies</h2>
+    <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="uglyfish">
+  <div id= "container">
+    <table id="myTable"></table>
+  </div>  
 </body>
-<script src="script.js" defer></script>
+<script src="script.js"></script>
 </html>
