--- a/sales.html
+++ b/sales.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h2>Salmon Cookies</h2>
-    <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="uglyfish">
-  <div id= "container">
+<div>
+    <img class="logo" src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="uglyfish">
+</div>
+    <div id= "container">
     <table id="myTable"></table>
   </div>  
 </body>
