--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Salmon Cookies</h2>
-<div>
+<div class="logo1">
     <img class="logo" src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt="uglyfish">
 </div>
     <div id= "container">
